21/08/2011 Changes

Adding ability to emit JVM bytecode from within a Smalltalk method.


15/08/2011 Changes

Cleaned up Exception handling so we don't nest causal exceptions that don't need nesting.
(smaller stack traces)


14/08/2011 Changes

Added example script calling a call. Shows up a need to handle exceptions a little better.
ie: when the script throws an exception, it looks like the class isnt found which isnt true.


13/08/2011 Changes

Removed a lot of trace - will put back later.
Continuing with implementing Runtime.


12/08/2011 Changes

Empty methods now answer receiver.
Changed message send when a class is invoked by stic to "main:"


11/08/2011 Changes

Added start of method analyser to handle setup of method bytecode writing.
Method compilation and dispatch to dynamically created methods working.
Primitives <primitive: xx> being called.
Implemented basicNew.


10/08/2011 Changes

Added trampoline of registering a method to be compiled and a message send to have method
compiled.


09/08/2011 Changes

Added support for requesting the compiling of methods.
Added MethodBytecodeWriter to handle writing method classes.


08/08/2011 Changes

Added generator support for reserved words nil, false, true, self and super.


07/08/2011 Changes

Finished bootstrap resolution. Full Runtime required to run is now compiled and loaded
before a 'user' class is compiled and run. 


06/08/2011 Changes

Turning bootstrapped classes into full classes at load, rather than on first message not found.
This loading increased startup time, and makes run more predictable.


04/08/2011 Changes

Added start of stout - the Redline simple web tool - started by Pat Maddox and myself at
ESUG Las Vegas 2011.
Fixed silly bug in hierarchy.


03/08/2011 Changes

Added placeholder/start of Smalltalk Runtime.
Added bootstrap hieararchy for String and Symbol.
Added bootstrap hierarchy for Boolean, True, False and UndefinedObject including the 